--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@
 
 ### Neutral
 
-- White: hsl(0, 0%, 100%)
-- Rose White: hsl(330, 100%, 98%)
-- Eggshell: hsl(30, 54%, 90%)
-- Light Grey: hsl(30, 18%, 87%)
-- Wenge Brown: hsl(30, 10%, 34%)
-- Dark Charcoal: hsl(24, 5%, 18%)
+--White: hsl(0, 0%, 100%)
+--Rose-White: hsl(330, 100%, 98%)
+--Eggshell: hsl(30, 54%, 90%)
+--Light-Grey: hsl(30, 18%, 87%)
+--Wenge-Brown: hsl(30, 10%, 34%)
+--Dark-Charcoal: hsl(24, 5%, 18%)
 
 ## Typography
 
@@ -35,82 +35,415 @@
 - Family: [Outfit](https://fonts.google.com/specimen/Outfit)
 - Weights: 400, 600, 700        */
 
-.young-serif-regular {
-    font-family: "Young Serif", serif;
-    font-weight: 200;
-    font-style: normal;
-  }
+/* 
+- font-weights
+default: 400
+medium_500
+semi-bold_600
+bold_700
+
+- Line heights
+Default: 1
+small:1.05
+medium:1.2
+paragraph defalt: 1.6
+large: 1.8
+
+-Letter spacing
+-0.5px
+0.75px
+
+Typography System
+Font Size (px)	Equivalent in rem
+10px	0.625rem
+12px	0.75rem
+14px	0.875rem
+16px	1rem
+18px	1.125rem
+20px	1.25rem
+24px	1.5rem
+30px	1.875rem
+36px	2.25rem
+44px	2.75rem
+52px	3.25rem
+62px	3.875rem
+74px	4.625rem
+86px	5.375rem
+98px	6.125rem
+
+2. Spacing System
+Spacing (px)	Equivalent in rem
+2px	0.125rem
+4px	0.25rem
+8px	0.5rem
+12px	0.75rem
+16px	1rem
+24px	1.5rem
+32px	2rem
+48px	3rem
+64px	4rem
+80px	5rem
+96px	6rem
+128px	8rem
+
+02 colors
+
+primary: #e67e22
+Tints:
+#fdf2e9
+#fae5d3
+
+
+Shades: 
+#cf711f;
+#45260a
+
+Accents
+
+Greys:
+#333
+#555
+#888
+#767676 (ligtest gray allowed on #fff)
+#6f6f6f (lightest gray alllowed
+
+05 shadows
+box-shadow: 0 2.4px 4.8px rgba(0, 0, 0, 0.075);
+
+06 border-radius
+default:9px
+medium: 11px
+
+07 whitespace */
+:root {
+  /* ### Primary */
+
+  --Nutmeg: hsl(14, 45%, 36%);
+  --Dark-Raspberry: hsl(332, 51%, 32%);
+
+  /* ### Neutral */
+  --White: hsl(0, 0%, 100%);
+  --preptime-bg: hsl(330, 100%, 98%);
+  --Eggshell: hsl(30, 54%, 90%);
+  --Light-Grey: hsl(30, 18%, 87%);
+  --Wenge-Brown: hsl(30, 10%, 34%);
+  --Dark-Charcoal: hsl(24, 5%, 18%);
+  /* ## Typography */
+
+  /* ### Body Copy */
+
+  /* --Font-size-(paragraph): 16px */
+
+  /* spacing / typo system */
+
+  /* Typography System */
+  --font-size-4: 0.25rem; /* 4px */
+  --font-size-8: 0.5rem; /* 8px */
+  --font-size-10: 0.625rem; /* 10px */
+  --font-size-12: 0.75rem; /* 12px */
+  --font-size-14: 0.875rem; /* 14px */
+  --font-size-16: 1rem; /* 16px */
+  --font-size-18: 1.125rem; /* 18px */
+  --font-size-20: 1.25rem; /* 20px */
+  --font-size-24: 1.5rem; /* 24px */
+  --font-size-30: 1.875rem; /* 30px */
+  --font-size-36: 2.25rem; /* 36px */
+  --font-size-44: 2.75rem; /* 44px */
+  --font-size-52: 3.25rem; /* 52px */
+  --font-size-62: 3.875rem; /* 62px */
+  --font-size-74: 4.625rem; /* 74px */
+  --font-size-86: 5.375rem; /* 86px */
+  --font-size-98: 6.125rem; /* 98px */
+
+  /* Spacing System */
+  --spacing-2: 0.125rem; /* 2px */
+  --spacing-4: 0.25rem; /* 4px */
+  --spacing-8: 0.5rem; /* 8px */
+  --spacing-12: 0.75rem; /* 12px */
+  --spacing-16: 1rem; /* 16px */
+  --spacing-24: 1.5rem; /* 24px */
+  --spacing-32: 2rem; /* 32px */
+  --spacing-48: 3rem; /* 48px */
+  --spacing-64: 4rem; /* 64px */
+  --spacing-80: 5rem; /* 80px */
+  --spacing-96: 6rem; /* 96px */
+  --spacing-128: 8rem; /* 128px */
+}
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Prevent font size inflation */
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+/* Remove default margin in favour of better control in authored CSS */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin-block-end: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+/* Set core body defaults */
+body {
+  line-height: 1.5;
+  font-family: Outfit, sans-serif;
+  margin: 0;
+  color: var(--Wenge-Brown);
+  
+}
+
+/* Set shorter line heights on headings and interactive elements */
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
+  line-height: 1.1;
+}
+
+/* Balance text wrapping on headings */
+h1,
+h2,
+h3,
+h4 {
+  text-wrap: balance;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+  color: currentColor;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+/* Make sure textareas without a rows attribute are not tiny */
+textarea:not([rows]) {
+  min-height: 10em;
+}
+
+/* Anything that has been anchored to should have extra scroll margin */
+:target {
+  scroll-margin-block: 5ex;
+}
+
+main {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--Eggshell);
+}
+
+.container{
+  margin: var(--spacing-128) 22rem;
+  
+  padding: var(--spacing-32);
+}
+
+.desktopimg{
+  border-radius: 11px;
+}
+
+.phoneimg{
+  display: none;
+}
+
+
+
+.recipe-omelette {
+  border-radius: 22px;
+  background-color: var(--White);
+}
+
+.main-heading {
+  color: var(--Dark-Charcoal);
+}
+
+.main-heading,
+.sub-heading {
+  font-family: Young serif, serif;
+  font-weight: 400;
+}
+
+.prep-time {
+  background-color: var(--preptime-bg);
+  border-radius: 11px;
+}
+
+.prep-time h3 {
+  color: var(--Dark-Raspberry);
+  margin-top: 0;
+}
+
+.prep-time ul.wait-time {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.sub-heading,
+ul li::marker,
+ol li::marker,
+td {
+  color: var(--Nutmeg);
+}
+
+ul li::marker,
+ol li::marker {
+  font-weight: 600;
+}
+
+.ingredient {
+  border-bottom: 1px solid var(--Light-Grey);
+  padding: 0 0 var(--spacing-12) 0;
+}
+
+ol li span,
+ul li span {
+  color: var(--Wenge-Brown);
+  font-weight: 700;
+}
+
+.instruction {
+  border-bottom: 1px solid var(--Light-Grey);
+  padding: 0 0 var(--spacing-12) 0;
+}
+
+table.nutri-table {
+  margin-top: var(--spacing-16);
+  width: 100%;
+  border-collapse: collapse;
+}
+
+tr {
+  border-bottom: 1px solid var(--Light-Grey);
+}
+
+tr:last-child {
+  border-bottom: none;
+}
+
+table.nutri-table th {
+  font-weight: 400;
+}
+
+/* media query */
+@media (max-width: 34em) {
   
 
-.wholecontent {
-    border-radius: 20px;
-    background-color: white;
-    max-width: 1440px;
-    padding: 35px;
+  main{
+    justify-content: start; 
+    background-color: var(--White);
+  }
+
+  .container{
+    margin: 0;
+    padding: 0;
+  }
+
+  .recipe-omelette {
+    padding: var(--spacing-32);
+    /* min-width: 18rem; */
+  }
+
+  .desktopimg{
+    display: none;
+  }
+
+  .phoneimg{
+    display: block;
+  }
+
+  .main-heading {
+    margin-top: 0;
+    font-size: var(--font-size-36);
+    font-weight: 400;
     text-wrap: wrap;
+  }
 
-}
+  .prep-time {
+    padding: var(--spacing-24);
+    margin: var(--spacing-24) 0;
+  }
 
-body {
-   background-color: hsl(30, 54%, 90%);
-   text-align: left;
-   margin: 375px;
-}
+  .prep-time ul {
+    padding-left: var(--spacing-24);
+    margin-bottom: 0;
+  }
+  .prep-time ul li {
+    margin-bottom: var(--spacing-16);
+  }
+  .prep-time ul li:last-child {
+    margin-bottom: 0;
+  }
 
-div h4 {
-    font-family: Outfit;
-    color: hsl(332, 51%, 32%);
-}
+  /* .prep-time ul li span {
+    margin-left: var(--spacing-16);
+  } */
 
-h2 {
-    font-family: "Young Serif", serif;
-    color: hsl(14, 45%, 36%);
-}
+  /* .prep-time h3 {
+    color: var(--Dark-Raspberry);
+    margin-top: 0;
+  } */
 
-.preptime {
-    background-color: hsl(330, 100%, 98%);
-    padding: 15px;
-    border-radius: 15px;
-}
+  ul.ingredients {
+    padding-left: var(--spacing-24);
+  }
 
-p  {
-    font-family: Outfit;
-    font-size: 16px;
-}
-h1 {
-    font-family: "Young Serif", serif;
-    color:  hsl(24, 5%, 18%)
-}
+  ul.ingredients li {
+    padding-left: var(--spacing-12);
+    margin: 0 0 var(--spacing-12);
+  }
 
-ul li {
-    font-family: Outfit;
-}
+  ol.instructions {
+    padding: 0 0 0 var(--spacing-24);
+  }
 
-ol li {
-    font-family: Outfit;
-    padding: 5px;
-}
-#img1 {
-    width: 45em;
-    border-radius: 15px;
-}
+  ol.instructions li {
+    padding: 0 0 0 var(--spacing-16);
+    margin-bottom: var(--spacing-16);
+  }
 
-.nutritable {
-    font-family: Outfit;
-}
-
-
-.thead {
-    padding: 10px;
-    padding-left: 25px;
-}
-
-.tdata {
-    text-align: right;
-    padding-left: 225px;
-}
-
-.attribution {
-    margin-top: 50px;
-    
+  th,td{
+    padding: var(--spacing-8);
+  }
 }
