--- a/style.css
+++ b/style.css
@@ -346,6 +346,10 @@ ol li::marker {
   padding: 0 0 var(--spacing-12) 0;
 }
 
+.ingredient h2.sub-heading {
+  margin-top: var(--spacing-24);
+}
+
 ul.ingredients {
   padding-left: var(--spacing-24);
 }
@@ -388,9 +392,15 @@ tr:last-child {
   border-bottom: none;
 }
 
+th,
+td {
+  padding: var(--spacing-8);
+}
+
 table.nutri-table th {
   font-weight: 400;
   text-align: left;
+  padding-left: var(--spacing-32);
 }
 
 table.nutri-table td {
