--- a/style.css
+++ b/style.css
@@ -309,8 +309,9 @@ main {
   border-radius: 11px;
 }
 
-.prep-time h3 {
+.prep-time h2 {
   color: var(--Dark-Raspberry);
+  font-size: var(--font-size-18);
   margin-top: 0;
 }
 
